style.css
/* CSS Sheet */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.header {
    background-color: #1F2937;
    font-family: "Roboto", sans-serif;
    font-weight: 900;
    font-size: 12px;
    color: #F9FAF8;
}

.links {
    list-style-type: none;
    padding: 0;
    margin: 0;
    display: flex;
}


.text-two {
    margin: 8px;
    font-family: "Roboto", sans-serif;
    font-size: 9px;
    background-color: #1F2937;
    color: #F9FAF8;
}

.container-one {
    gap: 60px;
    background-color: #1F2937;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.header-two {
    font-family: "Roboto", sans-serif;
    font-size: 24px;
    background-color: #1F2937;
    color: #F9FAF8;
    font-weight: 900;
}

.paragraph-one, .button {
    font-family: "Roboto", sans-serif;
    font-size: 9px;
    background-color: #1F2937;
    color: #F9FAF8;
    margin-top: 8px;
}

.button {
  flex-grow: 0;
  flex-shrink: 0;
  cursor: pointer;
  padding: 8px 24px;
  border-radius: 8px;
  background: royalblue;
  border: 1px solid royalblue;
  color: white;
}

.image-one {
    width: 250px;
    height: 125px;
}

.container-two {
    padding: 60px;
    background-color: #1F2937;
    gap: 24px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.header-three {
    font-size: 18px;
    color: #1F2937;
    font-weight: 900;
    font-family: "Roboto", sans-serif;
    text-align: center;
}

.images {
    margin: 12px;
    width: 85px;
    height: 85px;
    border-style: solid;
    border-radius: 6px;
    border-width: 2px;
    border-color: royalblue;
}

.paragraph-two {
    font-family: "Roboto", sans-serif;
    color: #97999c;
    font-size: 9px;
}

.illustrations {
    margin: 12px;
    display: flex;
    justify-content: center;
    align-items: center;
}

